src/css/_modules.scss
/* ... */
.card {
	@include flexbox;
	@include flex-column;
	margin-bottom: 40px;
	padding: 15px;
	font-weight: 300;
    line-height: 2;

	&--date {
		order: -1;
		font-size: 1rem;
		color: $m-dark-blue;
		font-weight: 700;
		margin: 0 0 10px 0;
	}

	@media (min-width: 800px) {
		flex-direction: row;

		&:nth-child(even) {
			justify-content: flex-end;
			text-align: left;
			.card--content:after {
				@include triangle(right, $l-white);
			}
			.card--content:before {
				@include triangle(right, $m-light-grey);
				margin-right: 1px;
			}

			.card--date {
				@include card-title(right);
			}
		}

		&:nth-child(odd) {
			text-align: right;
			.card--content:after {
				@include triangle(left, $l-white);
			}
			.card--content:before {
				@include triangle(left, $m-light-grey);
				margin-left: 1px;
			}

			.card--date {
				@include card-title(left);
			}
		}

		&--date {
			order: 0;
			font-size: 0.75rem;
			text-align:center;
			margin: 20px 0 0 -58px;
			left: 50%;
			width: 120px;
		}

		&--content {
			position: relative;
			width: 41%;
			margin-right: 17px;
			padding: 20px;
			border: 1px solid $m-light-grey;
		}

		&--content:hover {
			background-color: $l-green;
			border-color: $l-green;
			transition: all 400ms;
			color: white;
		}
	}
}

.skills {
	@include flexbox;
	@include flex-column;
	background-color: $m-skills-black;
	align-items: center;
	width: 100%;
	padding-top: 120px;
	padding-bottom: 80px;
	&--title {
		@include section-title;
		color: $l-white;
		text-align: center;
	}

	&--list {
		@include flexbox;
		@include flex-column;
		flex-wrap: wrap;
		width: 100%;
		margin: auto;
		padding: 20px;

		@media (min-width: 800px) {
			flex-direction: row;
		}
	}
}

.skill {
	@include flexbox;
	@include center-flex;
	@include flex-column;
	width: 100%;
	margin-bottom: 30px;
	text-align: center;

	&--title {
		color: $l-white;
		font-size: 1rem;
		width: 100%;
	}

	&--preferred {
		font-weight: 700;
		color: $l-green;
	}


	@media(min-width: 800px) {
		flex-direction: row;
		width: 50%;
		&--title {
			margin-right: 10px;
			margin-left: 40px;
		}

		&--progress {
			width: 400px;
		}
	}
	

	&--progress {
		width: 100%;
		height: 10px;
		background-color: $m-skills-bar-black;
		border-radius: 3px;

	}

	&--bar {
		background-color: $l-green;
		border-radius: 3px 0 0 3px;
		height:100%;
		width: 90%;
	}
}

.works {
	
	@include flexbox;
	@include flex-column;
	align-items: center;
	margin-top: 120px;
	margin-bottom: 80px;

	&--title {
		@include section-title;
		text-align: center;
	}
}


.portfolio {
	@include flexbox;
	width: 95%;

	@media (min-width: 800px) {
		&--item {
			flex-basis: 25%;
		}
	}

	&--darken {
		position: absolute;
		width: 100%;
		height: 100%;
		opacity: 0;
		background-color: rgba(26, 30, 31, 0.85);
		transition: all 400ms;
	}

	&--item {
		@include flexbox;
		position: relative;
		overflow-y: hidden;
	}

	&--item:hover {

		.portfolio--title {
			bottom: 0;
		}

		.portfolio--link {
			opacity: 1;
			transform: translate(0,0);
			transition: all 400ms;
		}

		.portfolio--darken {
			opacity: 1;
		}
	}

	&--thumbnail {
		width: 100%;

		img {
			display: block;
			width: 100%;
		}
	}

	&--overlay {
		position: absolute;
		left: 0;
		width: 100%;
		height: 100%;
	}

	&--title {
		position: absolute;
		bottom: 0;
		width: 100%;
		text-align: center;
		padding: 10px;
		font-size: 0.6rem;
		background-color: $l-green;
		color: $l-white;
		bottom: -100%;
		transition: all 400ms;
	}

	&--link {
		opacity: 0;
		position: absolute;
		text-align: center;
		top: 20%;
		width: 40px;
		left: 50%;
		margin-left: -23px;
		transform: translate(0,-50px);
		a {
			position: relative;
			color: $l-white;
			z-index: 1;
		}
	}
}

.available {
	width: 100%;
	height: 400px;
	background: linear-gradient(to top, $l-green, rgba(104, 195, 163, 0.7)), url(#{$img-folder}/available.jpg) no-repeat center center;
	background-size: cover;
	background-attachment: fixed;

	@include flexbox;
	@include flex-column;
	@include center-flex;

	margin-bottom: 80px;

	color: $l-white;

	&--title {
		margin-bottom: 40px;
	}

	&--button {
		color: $l-white;
		border: 1px solid white;
		border-radius: 5px;
		padding: 15px 60px;
		transition: all 400ms;
	}

	&--button:hover {
		background-color: $l-white;
		color: $l-green;
	}
}

.contact {

	@include flexbox;
	@include center-flex;
	@include flex-column;
	margin-bottom: 80px;

	&--title {
		@include section-title;
	}

	&--form {
		@include flexbox;
		@include center-flex;
		@include flex-column;
		align-items: flex-start;
		width: 90%;

		@media (min-width: 800px) {
			width: 100%;
		}
	}

	&--label {
		text-align: left;
		font-size: 0.6rem;
		color: $l-dark-grey;
		margin-bottom: 10px;
	}

	&--input {
		width: 100%;
		background-color: $m-background-grey;
		border: 1px solid $m-outline-grey;
		padding: 10px;
		margin-bottom: 20px;
		font-size: 0.6rem;
		color: $m-input-text;
	}

	&--input:focus {
		transition: all 400ms;
		outline: none;
		border: 1px solid$l-green;
	}

	&--button {
		background-color: $l-green;
		color: white;
		font-weight: 700;
		padding: 14px 20px;
		border-radius: 4px;
		font-size: 0.66rem;
		border: none;
		outline: none;
	}

	&--button:active {
		    box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
	}

}

